[package]
name = "ohmydb"
version = "1.2.2"
edition = "2021"
description = "A light-weight local json database"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
fake = { version = "=2.9.2", features = ["derive"] }
serde-value = "0.7.0"
colored = "2.1.0"
