[package]
name = "ohmydb"
version = "2.0.1"
edition = "2021"
description = "A light-weight local json database"
license = "MIT OR Apache-2.0"
authors = ["Rasoul Hesami Rostami <h.rostami.r@gmail.com>"]
repository = "https://github.com/Rasoul678/ohmydb"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde-value = "0.7.0"
colored = "2.1.0"
